# pagefind

pagefind_web/: Cargo.toml
pagefind_web_js/: package-lock.json  package.json
